# asr-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
asr_bridge/: __init__.py  __main__.py  app.py
fun_asr_openai_proxy/: __init__.py  __main__.py  app.py  dashscope.py  doubao.py  providers.py
fun_asr_openai_proxy/static/: admin.css  admin.js  index.html
scripts/: smoke_local.sh
tests/: test_dashscope_client.py  test_doubao_client.py  test_main.py  test_openai_proxy.py  test_project_config.py  test_provider_router.py
