[project]
name = "fun-asr-openai-proxy"
version = "0.1.0"
description = "OpenAI-compatible transcription proxy for Alibaba Cloud Bailian Fun-ASR."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
