[project]
name = "asr-bridge"
version = "0.1.0"
description = "ASR Bridge: OpenAI-compatible transcription proxy for Bailian Fun-ASR and Doubao ASR."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
